Fix: hidden heart marker is now showed.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/general.css">
+    <link rel="shortcut icon" href="./style/icon/heart.svg" type="image/x-icon">
     <title>To my beloved Paolla Z. B.</title>
 </head>
 
@@ -28,10 +29,12 @@
             </audio>
         </div>
         <div class="date">
-            <h1 class="center">Nós demos match!</h1>
-            <img src="./style/photo/match-tony.jpg" alt="" class="photo-match match-left">
-            <img src="./style/icon/heart.svg" alt="" class="match-heart">
-            <img src="./style/photo/match-pepper.jpg" alt="" class="photo-match match-right">
+            <div class="no-overflow">
+                <h1 class="center">Nós demos match!</h1>
+                <img src="./style/photo/match-tony.jpg" alt="" class="photo-match match-left">
+                <img src="./style/icon/heart.svg" alt="" class="match-heart">
+                <img src="./style/photo/match-pepper.jpg" alt="" class="photo-match match-right">
+            </div>
         </div>
         <div class="date">
             <p class="justify">Eu estava ocupado, mas não deixava de fazer os stories pra ti poder responder</p>
